@@ -84,6 +84,9 @@ Testing:
 
 	test.sh: Added help text
 
+	Speeded up wait loops; more addresses in upper case; more tests with
+	command printing ($VERBOSE)
+
 ####################### V 1.7.4.4:
 
 Corrections:
